@@ -3,14 +3,17 @@ package intbyte4.learnsmate.blacklist.service;
 import intbyte4.learnsmate.admin.domain.dto.AdminDTO;
 import intbyte4.learnsmate.admin.domain.entity.Admin;
 import intbyte4.learnsmate.admin.mapper.AdminMapper;
-import intbyte4.learnsmate.blacklist.domain.dto.BlacklistDTO;
-import intbyte4.learnsmate.blacklist.domain.dto.BlacklistFilterRequestDTO;
-import intbyte4.learnsmate.blacklist.domain.dto.BlacklistReportCommentDTO;
+import intbyte4.learnsmate.admin.service.AdminService;
+import intbyte4.learnsmate.blacklist.domain.dto.*;
 import intbyte4.learnsmate.blacklist.domain.entity.Blacklist;
+import intbyte4.learnsmate.blacklist.domain.vo.response.ResponseFindBlacklistVO;
+import intbyte4.learnsmate.blacklist.domain.vo.response.ResponseFindReservedStudentBlacklistVO;
 import intbyte4.learnsmate.blacklist.mapper.BlacklistMapper;
 import intbyte4.learnsmate.blacklist.repository.BlacklistRepository;
 import intbyte4.learnsmate.comment.domain.dto.CommentDTO;
 import intbyte4.learnsmate.comment.service.CommentService;
+import intbyte4.learnsmate.common.exception.CommonException;
+import intbyte4.learnsmate.common.exception.StatusEnum;
 import intbyte4.learnsmate.member.domain.MemberType;
 import intbyte4.learnsmate.member.domain.dto.MemberDTO;
 import intbyte4.learnsmate.member.domain.entity.Member;
@@ -20,6 +23,10 @@ import intbyte4.learnsmate.report.domain.dto.ReportDTO;
 import intbyte4.learnsmate.report.domain.dto.ReportedMemberDTO;
 import intbyte4.learnsmate.report.service.ReportService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -37,32 +44,78 @@ public class BlacklistService {
     private final CommentService commentService;
     private final MemberMapper memberMapper;
     private final AdminMapper adminMapper;
+    private final AdminService adminService;
 
     // 1. flag는 볼필요 없음. -> 학생, 강사만 구분해야함.
-    public List<BlacklistDTO> findAllBlacklistByMemberType(MemberType memberType) {
-        return blacklistRepository.findAllBlacklistByMemberType(memberType);
+    public BlacklistPageResponse<ResponseFindBlacklistVO> findAllBlacklistByMemberType(int page, int size, MemberType memberType) {
+
+        // Pageable 객체 생성
+        PageRequest pageable = PageRequest.of(page, size);
+
+        // 페이징 처리된 데이터 조회
+        Page<BlacklistDTO> blacklistPage = blacklistRepository.findAllBlacklistByMemberType(memberType, pageable);
+
+        // DTO -> VO 변환
+        List<ResponseFindBlacklistVO> responseList = blacklistPage.getContent().stream()
+                .map(blacklistMapper::fromBlacklistDTOtoResponseFindBlacklistVO)
+                .collect(Collectors.toList());
+
+        // 페이지 응답 생성
+        return new BlacklistPageResponse<>(
+                responseList,
+                blacklistPage.getTotalElements(),
+                blacklistPage.getTotalPages(),
+                blacklistPage.getNumber(),
+                blacklistPage.getSize()
+        );
     }
 
     // 1. 멤버 타입에 따라 신고내역 횟수 뒤져서 찾기 reportService.findCount
     // (피신고자 코드의 횟수만 가져오면 됨. -> 피신고자 멤버코드, 신고 횟수)
     // 2. Member table에서 가져오기(true인 놈들)
-    public List<ReportedMemberDTO> findAllReservedBlacklistByMemberType(MemberType memberType) {
+    public ReservedBlacklistPageResponse<?> findAllReservedBlacklistByMemberType(
+            int page, int size, MemberType memberType)
+    {
 
-        // 모든 멤버 가져옴.
-        List<ReportedMemberDTO> reportedMoreThanFiveMemberList = reportService.findReportCountByMemberCode();
+        Pageable pageable = PageRequest.of(page, size);
 
-        // 멤버 타입이 동일한거만 가져오기 -> 원래는 sql로 처리해야하지만 많지 않을것이기 때문에 백엔드에서 처리해도 무방하다 생각
-        // + flag가 true인 사람 가져오기
-        List<ReportedMemberDTO> filteredList = reportedMoreThanFiveMemberList.stream()
+        // 모든 멤버 가져옴 (페이지네이션 포함)
+        Page<ReportedMemberDTO> reportedMemberPage = reportService.findReportCountByMemberCode(pageable);
+
+        // 멤버 타입이 동일하고 flag가 true인 사람만 필터링
+        List<ReportedMemberDTO> filteredList = reportedMemberPage.stream()
                 .filter(dto -> dto.getReportedMember().getMemberType().equals(memberType)
-                                && dto.getReportedMember().getMemberFlag())
-                .collect(Collectors.toList());
+                        && dto.getReportedMember().getMemberFlag())
+                .toList();
 
-        return filteredList;
+        // Page로 다시 변환
+        Page<ReportedMemberDTO> filteredPage = new PageImpl<>(filteredList, pageable, filteredList.size());
+
+        // DTO -> VO 변환
+        List<ResponseFindReservedStudentBlacklistVO> content = filteredPage.getContent().stream()
+                .map(blacklistMapper::fromReportedMemberDTOToResponseFindReservedStudentBlacklistVO)
+                .toList();
+
+        return new ReservedBlacklistPageResponse<>(
+                content,
+                filteredPage.getTotalElements(),
+                filteredPage.getTotalPages(),
+                page,
+                size
+        );
     }
 
     // 블랙리스트에서 신고당한 댓글 내역까지 모두 볼수 있는 서비스 메서드
-    public List<BlacklistReportCommentDTO> findBlacklistReportComment(Long memberCode) {
+    public List<BlacklistReportCommentDTO> findBlacklistReportComment(Long blacklistCode, Long mCode) {
+        Long memberCode = null;
+        if(mCode == null && blacklistCode != null){
+            memberCode = blacklistRepository.findById(blacklistCode).get().getMember().getMemberCode();
+        }else if(blacklistCode == null && mCode != null){
+            memberCode = mCode;
+        }
+
+        if(memberCode == null)
+            throw new CommonException(StatusEnum.USER_NOT_FOUND);
 
         // 1. Report table에서 memberCode와 reportedMemberCode 가 같은거 가져오기
         List<ReportDTO> reportDTOlist = reportService.findAllReportByMemberCode(memberCode);
@@ -90,7 +143,8 @@ public class BlacklistService {
         Member member = memberMapper.fromMemberDTOtoMember(memberDTO);
 
         // 2. admin을 찾아와야 하는데 나중에 token으로 처리 할듯?
-        AdminDTO adminDTO = new AdminDTO();
+        AdminDTO adminDTO = adminService.findByAdminCode(202001001L);
+//        AdminDTO adminDTO = new AdminDTO();
         Admin admin = adminMapper.toEntity(adminDTO);
 
         // 3. BlacklistDTO 생성 -> 이유만 있으면 됨. -> 이유도 넘겨받아야함. -> dto 자체를 넘겨받으면 해결
@@ -105,8 +159,36 @@ public class BlacklistService {
     }
 
     // 블랙리스트 필터링 메서드
-    public List<BlacklistDTO> filterBlacklistMember(BlacklistFilterRequestDTO dto){
-        List<Blacklist> blacklistList = blacklistRepository.searchBy(dto);
+    public BlacklistPageResponse<ResponseFindBlacklistVO> filterBlacklistMember(BlacklistFilterRequestDTO dto, int page, int size){
+
+        Pageable pageable = PageRequest.of(page, size);
+
+        Page<Blacklist> blacklistPage = blacklistRepository.searchBy(dto, pageable);
+
+        List<ResponseFindBlacklistVO> blacklistVOList = blacklistPage.getContent().stream()
+                .map(blacklistMapper::fromBlacklistToResponseFindBlacklistVO)
+                .collect(Collectors.toList());
+
+        return new BlacklistPageResponse<>(
+                blacklistVOList,
+                blacklistPage.getTotalElements(),
+                blacklistPage.getTotalPages(),
+                blacklistPage.getNumber() + 1,
+                blacklistPage.getSize()
+        );
+    }
+
+    // filterDTO에서 MEMBER TYPE SET 함
+    public List<BlacklistDTO> findAllByFilterWithExcel(BlacklistFilterRequestDTO filterDTO){
+        List<Blacklist> blacklistList = blacklistRepository.searchByWithoutPaging(filterDTO);
+
+        return blacklistList.stream()
+                .map(blacklistMapper::fromBlacklistToBlacklistDTO)
+                .collect(Collectors.toList());
+    }
+
+    public List<BlacklistDTO> findAllByMemberTypeWithExcel(MemberType memberType){
+        List<Blacklist> blacklistList = blacklistRepository.findAllByMemberTypeWithExcel(memberType);
 
         return blacklistList.stream()
                 .map(blacklistMapper::fromBlacklistToBlacklistDTO)
